package com.university.project.legendsofswordandwand.model.enums;

public enum ActionType {
  ATTACK,
  DEFEND,
  WAIT,
  CAST
}
