package com.university.project.legendsofswordandwand.model.enums;

public enum BattleStatus {
  IN_PROGRESS,
  PLAYER_WIN,
  PLAYER_LOSE
}
