package com.university.project.legendsofswordandwand.model.enums;

/** Hero Type enum class. */
public enum HeroClass {
  ORDER,
  CHAOS,
  WARRIOR,
  MAGE
}
