package com.university.project.legendsofswordandwand.model.enums;

public enum InvitationStatus {
  PENDING,
  ACCEPTED,
  REJECTED,
  EXPIRED,
  CANCELED,
}
