package com.university.project.legendsofswordandwand.model.enums;

public enum RoomType {
  BATTLE,
  INN
}
